--- a/style.css
+++ b/style.css
@@ -385,6 +385,233 @@ h2.title {
   text-decoration: none;
 }
 
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #ffffff;
+  width: 375px;
+  gap: 24px;
+  border-top-right-radius: 80px;
+}
+
+.top {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: static;
+  width: 327px;
+  gap: 12px;
+  margin: 114px 24px 48px 24px;
+  padding: 0px;
+  height: 409px;
+}
+
+.about-title {
+  display: flex;
+  width: 327px;
+  margin-bottom: 12px;
+  height: 101px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  align-items: center;
+  color: #172b4d;
+}
+
+.hello {
+  display: flex;
+  height: 144px;
+  margin-bottom: 12px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #344563;
+}
+
+.Social-media-layout{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 16px;
+  width: 200px;
+  height: 80px;
+  margin-left: -24px;
+  margin-bottom: 12px;
+}
+
+.social-media {
+  display: flex;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #7f8cff;
+}
+
+.about-btn {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 12px;
+  gap: 10px;
+  height: 48px;
+  border: 1px solid #6070FF;
+  border-radius: 8px;
+  color: #396df2;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-top: 12px;
+  margin-left: 0px;
+}
+
+
+.about-btn:hover {
+  border: 1px solid #6070FF;
+  color: #ffffff;
+  background-color: #396df2;
+}
+
+
+.about-btn:visited {
+  background: #2230d2;
+  border: solid 1px #2230d2;
+}
+
+.skills-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  width: 327px;
+  height: 464.15px;
+  margin: 24px 24px 113.85px 24px;
+}
+
+.frame-languages {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  width: 327px;
+  height: 320.15px;
+}
+
+.languages {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  width: 327px;
+  height: 72px;
+}
+
+.lang {
+  display: flex;
+  align-items: center;
+  color: #000000;
+  top: calc(50% - 24px / 2);
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  padding-left: 12px;
+  /* margin-top: 30px; */
+  margin: 0px;
+}
+
+.arrow {
+  width: 14px;
+  height: 8px;
+  margin-right: 50px;
+  margin-top: 24px;
+}
+
+.frame2 {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.language1 {
+  position: static;
+  width: 303px;
+  height: 66.72px;
+  left: 12px;
+  top: 12px;
+  background: #f7f7f9;
+  border-radius: 8px;
+  flex: none;
+  flex-grow: 0;
+  margin: 12px auto 12px 0;
+}
+
+.list {
+  display: grid;
+  grid-template-columns: 20% 80%;
+}
+
+.javascript {
+  padding: 9px 9.72px 12px;
+}
+
+.html {
+  padding: 9px 9.72px 12px;
+}
+
+.css {
+  padding: 9px 9.72px 12px;
+}
+
+.language {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  color: #253858;
+  margin: 25px auto 21.72px 12px;
+}
+
+hr.solid {
+  text-align: center;
+  border-top: 3px solid #dfe1e6;
+  width: 327px;
+  margin: 0px;
+}
+
+.frameworks {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  width: 327px;
+  height: 72px;
+  
+}
+
+.skills {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  width: 327px;
+  height: 72px;
+}
 
 
 
