--- a/style.css
+++ b/style.css
@@ -602,3 +602,141 @@ hr.solid {
   width: 327px;
   height: 72px;
 }
+
+footer {
+  margin: 0 auto;
+  width: 375px;
+  height: 779px;
+  border-radius: 76px 0 0 0;
+  background-color: #6070ff;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+  background: #6070ff url("images/contact-form.png") 100% -20px no-repeat;
+  background-size: contain;
+  border-top-left-radius: 100px;
+  padding-top: 114px;
+  margin-bottom: 10px;
+}
+
+.inner-div {
+  padding-top: 80px;
+  margin-right: 24px;
+  margin-left: 24px;
+}
+
+.contact-title {
+  display: flex;
+  margin: 0 auto;
+  font-family: 'Poppins', sans-serif;
+  color: #ffff;
+  align-items: center;
+  text-align: center;
+  font-style: normal;
+  line-height: 52px;
+  font-size: 40px;
+  font-weight: 700;
+  padding-bottom: 0;
+}
+
+.contact-description {
+  padding-top: 12px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  margin-left: 24px;
+  margin-right: 24px;
+  top: 4802px;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  color: #ebebff;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  margin-right: 24px;
+  margin-left: 24px;
+}
+
+.inner-list {
+  list-style-type: none;
+  padding-top: 50px;
+}
+
+li input {
+  display: flex;
+  background: #fff;
+  border: 1px solid #cfd8dc;
+  font-family: "Poppins", sans-serif;
+  color: #172b4d;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 20px;
+  border-radius: 8px;
+  width: 100%;
+  height: 50px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-top: 18px;
+}
+
+li textarea {
+  background: #fff;
+  border: 1px solid #cfd8dc;
+  font-family: "Poppins", sans-serif;
+  color: #b3bac5;
+  font-style: normal;
+  font-weight: 400;
+  border-radius: 8px;
+  width: 100%;
+  height: 150px;
+  padding-left: 24px;
+  font-size: 15px;
+  line-height: 24px;
+  margin-right: 24px;
+  margin-top: 18px;
+}
+
+.shape {
+  position: flex;
+  width: 134px;
+  height: 5px;
+  margin-bottom: 20px;
+  margin-right: 121px;
+  margin-left: 120px;
+  padding-top: 10px;
+}
+
+.flex-item6 button {
+  font-family: Poppins, sans-serif;
+  border-radius: 8px;
+  border: 1px solid #3d4ee4;
+  width: 140px;
+  height: 50px;
+  text-align: center;
+  padding: 10px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  letter-spacing: 0.03em;
+  color: #396df2;
+  background-color: white;
+  margin-top: 30px;
+}
+
+button:hover {
+  background: #8f9afc;
+  color: white;
+}
+
+button:active {
+  background: #0416b6;
+  color: white;
+}
