--- a/style.css
+++ b/style.css
@@ -34,6 +34,9 @@ a.union {
   padding-top: 5px;
   margin-right: 35px;
 }
+.menu {
+  display: none;
+}
 
 .main {
   background: #f7f7f9;
@@ -60,6 +63,8 @@ a.union {
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
+  width: 327px;
+  height: 150px;
   align-items: center;
   color: #172b4d;
   margin: 114px 24px 12px 24px;
@@ -742,4 +747,115 @@ button:hover {
 button:active {
   background: #0416b6;
   color: white;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    background-color: #e5e5e5;
+    font-family: "Poppins", sans-serif;
+    padding: 0;
+    margin: 0;
+  }
+
+  header {
+    position: fixed;
+    width: 100%; 
+    display: flex;
+    flex: 1 1 auto;
+    text-align: center;
+    padding: 1em;
+    background-color: #fff;
+    justify-content: space-between;
+  }
+
+  a.logo {
+    display: flex;
+    flex-direction: row;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 20px;
+    color: #6070ff;
+    margin-left: 150px;
+  }
+
+  .union {
+    display: none;
+  }
+
+  nav.menu {
+    display: flex;
+    flex-direction: row;
+    margin-right: 100px;
+    align-items: center;
+    text-align: center;
+    justify-content: space-between;
+    column-gap: 32px;
+    list-style-type: none;
+  }
+
+  header .menu a {
+    font-family: "poppins", sans-serif;
+    font-style: normal;
+    color: #344563;
+    text-decoration: none;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 500;
+  }
+
+  .headline {
+    background-color: #fff;
+    background-image: url("images/Header\ bg@2x.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100% ; 
+    display: flex; 
+    flex-direction: column;
+    border-bottom-left-radius: 70px;
+     width: 1349.4px;
+    height: 721.46px;   
+    left: 34.6px;
+    top: 119px; 
+  }
+
+  .primary1 {
+    display: flex;
+    align-items: center;
+    color: #091e42;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 60px;
+    margin-left: 260px;
+    margin-right: 260px;
+    align-items: center;
+    letter-spacing: 0.37px;
+    width: 920px;
+    height: 122px;
+  }
+
+  .headline p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    color: #344563;
+    margin-left: 260px;
+    margin-right: 260px;
+  }
+
+  p.social-media {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #7f8cff;
+  }
+
+  ul.social-media-icons {
+    list-style-type: none;
+    display: flex;
+    gap: 20px;
+    margin-left: 260px;
+    margin-bottom: 255px;
+  }
 }
