--- a/style.css
+++ b/style.css
@@ -536,7 +536,7 @@ h2.title {
   width: 14px;
   height: 8px;
   margin-right: 50px;
-  margin-top: 24px;
+  margin-top: 22px;
 }
 
 .frame2 {
@@ -759,6 +759,7 @@ button:active {
   header {
     position: fixed;
     width: 100%; 
+    z-index: 1;
     display: flex;
     flex: 1 1 auto;
     text-align: center;
@@ -903,7 +904,6 @@ button:active {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: flex-end;
-    gap: -22px;
   }
 
   .snapshotdesktop1 {
@@ -914,7 +914,7 @@ button:active {
   }
 
   .snapshotdesktop2 {
-    margin: 24px 22px;
+    margin: 24px 22px 24px 590px;
     width: 544px;
     height: 448px;
     border-radius: 8px;
@@ -942,7 +942,8 @@ button:active {
   }
 
   .multi-post {
-    margin-top: 24px;
+    margin-top: 48px;
+    /* margin: 24px 24px 12px 24px; */
   }
 
   .facebook360 {
@@ -1232,7 +1233,499 @@ button:active {
     text-decoration: none;
   }
 
+  .about {
+  position: absolute;
+  flex-direction: row;
+  gap: 24px;
+  align-items: center;
+  box-sizing: border-box;
+  width: 100%;
+  height: 924px;
+  background: url("images/abt-myself-desktop.png") no-repeat;
+  height: 924px;
+  border-top-right-radius: 80px;
+  top: 3600px;
+  }
+
+  .top {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 24px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    width: 447px;
+    height: 392px;
+    margin-left: 142px;
+    margin-top: 142px;
+    /* top: 3753px; */
+  }
+
+  h2.about-title {
+    width: 447px;
+    height: 114px;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+    color: #091E42;
+    margin-top: 0px;
+  }
+
+  p.hello {
+    width: 447px;
+    height: 102px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #344563;
+
+  }
+
+  .Social-media-layout .social-media-icons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    width: 200px;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .skills-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    width: 684px;
+    height: 360px;
+    margin-top: 142px;
+    margin-right: 142px;
+  }
+
+  .frame-languages {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    width: 684px;
+    height: 216px;
+  }
+
+  .languages {
+    width: 684px;
+    height: 72px;
+  }
+
+  .lang {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    color: #344563;
+  }
+
+  .arrow {
+    left: 25%;
+    right: 25%;
+    top: 37.5%;
+    bottom: 37.5%;
+  }
+
+  .frame2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px;
+    gap: 12px;
+    width: 414px;
+    height: 144px;
+  }
+
+  .list {
+    width: 122px;
+    height: 120px;
+    background: #F7F7F9;
+    border-radius: 8px;
+   
+
+  }
+
+  .language {
+    width: 98px;
+    height: 24px;
+    margin-left: 12px;
+    margin-top: 76px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    color: #253858;
+  }
+
+  .frameworks, .skills {
+    width: 684px;
+    height: 72px;
+  }
+
+  hr.solid {
+    text-align: center;
+    border-top: 3px solid #dfe1e6;
+    width: 100%;
+    margin-left: 0;
+    }
+
+  .footer {
+    top: 4515px;
+    position: absolute;
+    left: 0;
+  }
+
+  .contact {
+    background: #6070ff;
+    box-sizing: border-box;
+    padding: 103px 24px 8px 24px;
+    border-radius: 76px 0 0 0;
+    background-image: url("./Images/contactformbackgroundshapesdesktop.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: flex;
+    flex-direction: column;
+    width: 99vmax;
+    height: 846px;
+    align-items: center;
+    margin: 0 auto;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .contact-title {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 52px;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 0;
+    color: #fff;
+  }
+
+  .contact-title:hover {
+    background: #6070ff;
+    background-image: url("./Images/contactformbackgroundshapesdesktop.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    transform: scale(1.1);
+    width: 99vmax;
+    height: 846px;
+    align-items: center;
+    margin: 0 auto;
+  }
+
+  .first-title3:hover {
+    transform: translate(12px, 12px);
+    font-weight: bold;
+    color: #172b4d;
+    font-size: 44px;
+  }
+
+  .contact-description {
+    font-family: "poppins", sans-serif;
+    width: 569px;
+    height: 102px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+    color: #ebebff;
+  }
+
+  .contact-description:hover {
+    transform: translate(12px, 12px);
+    font-weight: bold;
+    color: #172b4d;
+    font-size: 24px;
+  }
+
+  .form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  input {
+    background: #fff;
+    width: 447px;
+    height: 48px;
+    margin: 10px 0 10px 0;
+    padding-left: 20px;
+    font-family: "poppins", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    color: #172b4d;
+    border: 1px solid #cfd8dc;
+    border-radius: 2px;
+  }
+
+  textarea {
+    background: #fff;
+    width: 447px;
+    height: 170px;
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-top: 10px;
+    font-family: "poppins", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 24px;
+    color: #b3bac5;
+    border: 1px solid #cfd8dc;
+    border-radius: 2px;
+  }
+
+  .flex-item6 button {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    letter-spacing: 0.03em;
+    background: #fff;
+    border-radius: 8px;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    padding: 12px 16px;
+    color: #396df2;
+    border: 1px solid #3d4ee4;
+    width: 150px;
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .flex-item6:hover {
+    background: #6070ff;
+    border-radius: 8px;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 16px;
+    border: 1px solid black;
+    width: 150px;
+    margin-top: 15px;
+  }
+
+  .flex-item6:visited {
+    background: #2230d2;
+    border-radius: 8px;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 16px;
+    border: 1px solid #2230d2;
+    width: 150px;
+    margin-top: 15px;
+  }
+
+  .flex-item6:disabled {
+    background: #e5e5e5;
+    border-radius: 8px;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 16px;
+    border: 1px solid #5e6c84;
+    width: 150px;
+    margin-top: 15px;
+  }
+
+  .shape {
+    display: none;
+  }
+
+  .footer {
+    top: 4515px;
+    position: absolute;
+    left: 0;
+  }
+
+  .contact {
+    background: #6070ff;
+    box-sizing: border-box;
+    padding: 103px 24px 8px 24px;
+    border-radius: 76px 0 0 0;
+    background-image: url("./Images/contactformbackgroundshapesdesktop.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: flex;
+    flex-direction: column;
+    width: 99vmax;
+    height: 846px;
+    align-items: center;
+    margin: 0 auto;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .contact-title {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 52px;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 0;
+    color: #fff;
+  }
+
+  .contact-description {
+    font-family: "poppins", sans-serif;
+    width: 569px;
+    height: 102px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+    color: #ebebff;
+  }
+
+  .form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  input {
+    background: #fff;
+    width: 447px;
+    height: 48px;
+    margin: 10px 0 10px 0;
+    padding-left: 20px;
+    font-family: "poppins", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    color: #172b4d;
+    border: 1px solid #cfd8dc;
+    border-radius: 2px;
+  }
+
+  textarea {
+    background: #fff;
+    width: 447px;
+    height: 170px;
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-top: 10px;
+    font-family: "poppins", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 24px;
+    color: #b3bac5;
+    border: 1px solid #cfd8dc;
+    border-radius: 2px;
+  }
+
+  .flex-item6 button {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    letter-spacing: 0.03em;
+    background: #fff;
+    border-radius: 8px;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    padding: 12px 16px;
+    color: #396df2;
+    border: 1px solid #3d4ee4;
+    width: 150px;
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .flex-item6:hover {
+    background: #6070ff;
+    border-radius: 8px;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 16px;
+    border: 1px solid black;
+    width: 150px;
+    margin-top: 15px;
+  }
+
+  .flex-item6:visited {
+    background: #2230d2;
+    border-radius: 8px;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 16px;
+    border: 1px solid #2230d2;
+    width: 150px;
+    margin-top: 15px;
+  }
+
+  .flex-item6:disabled {
+    background: #e5e5e5;
+    border-radius: 8px;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 16px;
+    border: 1px solid #5e6c84;
+    width: 150px;
+    margin-top: 15px;
+  }
+
+  .shape {
+    display: none;
+  }
+
+
+  }
 
 
 
-}
+
+
+  
+
+
+
+
+
+
+
