--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ a.union {
   padding-top: 5px;
   margin-right: 35px;
 }
+
 .menu {
   display: none;
 }
@@ -758,7 +759,7 @@ button:active {
 
   header {
     position: fixed;
-    width: 100%; 
+    width: 100%;
     z-index: 1;
     display: flex;
     flex: 1 1 auto;
@@ -808,28 +809,28 @@ button:active {
     background-color: #fff;
     background-image: url("images/Header\ bg@2x.png");
     background-repeat: no-repeat;
-    background-size: contain; 
+    background-size: contain;
     background-position: right;
-    display: flex; 
+    display: flex;
     flex-direction: column;
     border-bottom-left-radius: 70px;
     width: 99vmax;
-    height: 916px;   
-    top: 3rem; 
+    height: 916px;
+    top: 3rem;
   }
 
   .headline-text {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0px;
+    padding: 0;
     gap: 12px;
     position: absolute;
     width: 920px;
     height: 268px;
     margin-left: 260px;
     margin-right: 260px;
-    top: calc(50% - 268px/2);
+    top: calc(50% - 268px / 2);
   }
 
   .primary1 {
@@ -839,7 +840,6 @@ button:active {
     font-weight: 700;
     font-size: 48px;
     line-height: 60px;
-    align-items: center;
     letter-spacing: 0.37px;
     width: 920px;
     height: 122px;
@@ -863,7 +863,7 @@ button:active {
 
   ul.social-media-icons {
     list-style-type: none;
-    display: flex; 
+    display: flex;
     width: 170.17px;
     height: 20px;
     margin-left: 280px;
@@ -876,7 +876,7 @@ button:active {
     align-items: center;
     width: 100%;
     position: absolute;
-    margin: 0px;
+    margin: 0;
     padding: 142px;
     gap: 142px;
     top: 917px;
@@ -888,7 +888,7 @@ button:active {
     background: #fff;
     width: 1156px;
     height: 496px;
-    margin: 0px;
+    margin: 0;
   }
 
   .card-works1 {
@@ -904,6 +904,8 @@ button:active {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: flex-end;
+    margin: 0;
+    padding: 0;
   }
 
   .snapshotdesktop1 {
@@ -942,8 +944,7 @@ button:active {
   }
 
   .multi-post {
-    margin-top: 48px;
-    /* margin: 24px 24px 12px 24px; */
+    margin: 24px 24px 12px 24px;
   }
 
   .facebook360 {
@@ -955,7 +956,6 @@ button:active {
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
-    line-height: 52px;
     margin: 24px 24px 12px 24px;
   }
 
@@ -981,19 +981,13 @@ button:active {
     flex-direction: row;
     align-items: center;
     margin: 0;
-    padding: 0px;
-    gap: 25px;
+    padding: 0;
+    gap: 12px;
   }
+
   .frame1 {
     margin-left: 24px;
     margin-bottom: 24px;
-
-  }
-
-  .frame2 {
-    margin-left: 24px;
-    list-style-type: disc;
-
   }
 
   .canopy {
@@ -1021,11 +1015,11 @@ button:active {
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
+    margin-left: 12px;
   }
 
   .year {
     color: #6b778c;
-    margin: 0 0;
     flex: none;
     order: 0;
     flex-grow: 0;
@@ -1034,7 +1028,9 @@ button:active {
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
+    margin-left: 12px;
   }
+
   .desc-title {
     margin-left: 24px;
     margin-bottom: 24px;
@@ -1060,11 +1056,10 @@ button:active {
 
   .tags {
     margin: 0;
-    padding: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0px;
+    padding: 0;
     gap: 8px;
     width: 316px;
     height: 24px;
@@ -1085,7 +1080,7 @@ button:active {
     color: #6070ff;
     padding: 5px;
     gap: 8px;
-    margin-left: 0px;
+    margin-left: 0;
   }
 
   .tag2 {
@@ -1107,7 +1102,7 @@ button:active {
     border: 1px solid #7f8cff;
     box-sizing: border-box;
     border-radius: 8px;
-    order: 3; 
+    order: 3;
   }
 
   .action {
@@ -1128,130 +1123,55 @@ button:active {
   }
 
   .btn:hover {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px;
-    margin-top: 20px;
-    position: absolute;
-    width: 124px;
-    height: 48px;
-    left: 0;
-    top: calc(50% - 48px / 2);
     background: #2230d2;
     border: 1px solid #7f8cff;
-    box-sizing: border-box;
-    border-radius: 8px;
-    order: 3;
-    box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   }
 
-  .action:hover {
-    position: static;
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: #fff;
-    flex: none;
-    flex-grow: 0;
-    text-decoration: none;
+  .btn:active {
+    background: #0416b6;
+    color: white;
   }
 
   .btn:visited {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px;
-    margin-top: 20px;
-    position: absolute;
-    width: 124px;
-    height: 48px;
-    left: 0;
-    top: calc(50% - 48px / 2);
     background: #2230d2;
     border: 1px solid #7f8cff;
-    box-sizing: border-box;
-    border-radius: 8px;
-    order: 3;
-  }
-
-  .action:visited {
-    position: static;
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: #fff;
-    flex: none;
-    flex-grow: 0;
-    text-decoration: none;
   }
 
   .btn:disabled {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px;
-    margin-top: 20px;
-    position: absolute;
-    width: 124px;
-    height: 48px;
-    left: 0;
-    top: calc(50% - 48px / 2);
     background: #e5e5e5;
     border: 1px solid;
-    box-sizing: border-box;
-    border-radius: 8px;
-    order: 3;
+  }
+
+  .action:hover {
+    color: #fff;
+  }
+
+  .action:visited {
+    color: #fff;
   }
 
   .action:disabled {
-    position: static;
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.03em;
     color: #5e6c84;
-    flex: none;
-    flex-grow: 0;
-    text-decoration: none;
   }
 
   .about {
-  position: absolute;
-  flex-direction: row;
-  gap: 24px;
-  align-items: center;
-  box-sizing: border-box;
-  width: 100%;
-  height: 924px;
-  background: url("images/abt-myself-desktop.png") no-repeat;
-  height: 924px;
-  border-top-right-radius: 80px;
-  top: 3600px;
+    position: absolute;
+    flex-direction: row;
+    gap: 24px;
+    align-items: center;
+    box-sizing: border-box;
+    width: 100%;
+    height: 924px;
+    background: url("images/abt-myself-desktop.png") no-repeat;
+    border-top-right-radius: 80px;
+    top: 3600px;
   }
 
   .top {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0px;
+    padding: 0;
     gap: 24px;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
@@ -1259,7 +1179,6 @@ button:active {
     height: 392px;
     margin-left: 142px;
     margin-top: 142px;
-    /* top: 3753px; */
   }
 
   h2.about-title {
@@ -1268,8 +1187,8 @@ button:active {
     font-weight: 700;
     font-size: 40px;
     line-height: 52px;
-    color: #091E42;
-    margin-top: 0px;
+    color: #091e42;
+    margin-top: 0;
   }
 
   p.hello {
@@ -1279,14 +1198,12 @@ button:active {
     font-size: 16px;
     line-height: 24px;
     color: #344563;
-
   }
 
   .Social-media-layout .social-media-icons {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0px;
     width: 200px;
     height: 40px;
     margin: 0;
@@ -1297,7 +1214,7 @@ button:active {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0px;
+    padding: 0;
     width: 684px;
     height: 360px;
     margin-top: 142px;
@@ -1308,7 +1225,7 @@ button:active {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0px;
+    padding: 0;
     width: 684px;
     height: 216px;
   }
@@ -1347,10 +1264,8 @@ button:active {
   .list {
     width: 122px;
     height: 120px;
-    background: #F7F7F9;
+    background: #f7f7f9;
     border-radius: 8px;
-   
-
   }
 
   .language {
@@ -1368,7 +1283,8 @@ button:active {
     color: #253858;
   }
 
-  .frameworks, .skills {
+  .frameworks,
+  .skills {
     width: 684px;
     height: 72px;
   }
@@ -1378,186 +1294,6 @@ button:active {
     border-top: 3px solid #dfe1e6;
     width: 100%;
     margin-left: 0;
-    }
-
-  .footer {
-    top: 4515px;
-    position: absolute;
-    left: 0;
-  }
-
-  .contact {
-    background: #6070ff;
-    box-sizing: border-box;
-    padding: 103px 24px 8px 24px;
-    border-radius: 76px 0 0 0;
-    background-image: url("./Images/contactformbackgroundshapesdesktop.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    display: flex;
-    flex-direction: column;
-    width: 99vmax;
-    height: 846px;
-    align-items: center;
-    margin: 0 auto;
-    text-align: center;
-    justify-content: center;
-  }
-
-  .contact-title {
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 40px;
-    line-height: 52px;
-    height: 56px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin: 0;
-    color: #fff;
-  }
-
-  .contact-title:hover {
-    background: #6070ff;
-    background-image: url("./Images/contactformbackgroundshapesdesktop.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    transform: scale(1.1);
-    width: 99vmax;
-    height: 846px;
-    align-items: center;
-    margin: 0 auto;
-  }
-
-  .first-title3:hover {
-    transform: translate(12px, 12px);
-    font-weight: bold;
-    color: #172b4d;
-    font-size: 44px;
-  }
-
-  .contact-description {
-    font-family: "poppins", sans-serif;
-    width: 569px;
-    height: 102px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 28px;
-    text-align: center;
-    color: #ebebff;
-  }
-
-  .contact-description:hover {
-    transform: translate(12px, 12px);
-    font-weight: bold;
-    color: #172b4d;
-    font-size: 24px;
-  }
-
-  .form {
-    display: flex;
-    flex-direction: column;
-  }
-
-  input {
-    background: #fff;
-    width: 447px;
-    height: 48px;
-    margin: 10px 0 10px 0;
-    padding-left: 20px;
-    font-family: "poppins", sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 17px;
-    line-height: 20px;
-    display: flex;
-    align-items: center;
-    color: #172b4d;
-    border: 1px solid #cfd8dc;
-    border-radius: 2px;
-  }
-
-  textarea {
-    background: #fff;
-    width: 447px;
-    height: 170px;
-    padding-left: 20px;
-    padding-top: 10px;
-    margin-top: 10px;
-    font-family: "poppins", sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 15px;
-    line-height: 24px;
-    color: #b3bac5;
-    border: 1px solid #cfd8dc;
-    border-radius: 2px;
-  }
-
-  .flex-item6 button {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 17px;
-    letter-spacing: 0.03em;
-    background: #fff;
-    border-radius: 8px;
-    height: 48px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    text-align: center;
-    padding: 12px 16px;
-    color: #396df2;
-    border: 1px solid #3d4ee4;
-    width: 150px;
-    margin-top: 15px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .flex-item6:hover {
-    background: #6070ff;
-    border-radius: 8px;
-    height: 48px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 16px;
-    border: 1px solid black;
-    width: 150px;
-    margin-top: 15px;
-  }
-
-  .flex-item6:visited {
-    background: #2230d2;
-    border-radius: 8px;
-    height: 48px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 16px;
-    border: 1px solid #2230d2;
-    width: 150px;
-    margin-top: 15px;
-  }
-
-  .flex-item6:disabled {
-    background: #e5e5e5;
-    border-radius: 8px;
-    height: 48px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 16px;
-    border: 1px solid #5e6c84;
-    width: 150px;
-    margin-top: 15px;
-  }
-
-  .shape {
-    display: none;
   }
 
   .footer {
@@ -1671,61 +1407,17 @@ button:active {
     margin-right: auto;
   }
 
-  .flex-item6:hover {
-    background: #6070ff;
-    border-radius: 8px;
-    height: 48px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 16px;
-    border: 1px solid black;
-    width: 150px;
-    margin-top: 15px;
+  button:hover {
+    background: #8f9afc;
+    color: white;
   }
 
-  .flex-item6:visited {
-    background: #2230d2;
-    border-radius: 8px;
-    height: 48px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 16px;
-    border: 1px solid #2230d2;
-    width: 150px;
-    margin-top: 15px;
-  }
-
-  .flex-item6:disabled {
-    background: #e5e5e5;
-    border-radius: 8px;
-    height: 48px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 16px;
-    border: 1px solid #5e6c84;
-    width: 150px;
-    margin-top: 15px;
+  button:active {
+    background: #0416b6;
+    color: white;
   }
 
   .shape {
     display: none;
   }
-
-
-  }
-
-
-
-
-
-  
-
-
-
-
-
-
-
+}
