--- a/style.css
+++ b/style.css
@@ -674,7 +674,7 @@ footer {
   line-height: 28px;
   text-align: center;
   color: #ebebff;
-  transition: all 0.35s ease-in; 
+  transition: all 0.35s ease-in;
 }
 
 .contact-description:hover {
@@ -821,12 +821,12 @@ button:active {
     font-size: 15px;
     line-height: 20px;
     font-weight: 500;
-    transition: all .5s ease-in-out;
+    transition: all 0.5s ease-in-out;
   }
 
   header .menu a:hover {
     letter-spacing: 2px;
-    opacity: .6;
+    opacity: 0.6;
   }
 
   .headline {
